force-app/main/default/objects/OpportunityLineItem/fields/Accounting_Bin_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bin_Overridden__c</fullName>
    <formula>BLANKVALUE( TEXT(Accounting_Bin_Override__c) ,   BLANKVALUE(TEXT(PricebookEntry.Product2.Accounting_Bin__c), &quot;Subscriptions&quot;)  )</formula>
    <label>Accounting Bin Overridden</label>
    <type>Text</type>
</CustomField>