force-app/main/default/objects/OpportunityLineItem/fields/Accounting_Bin_Override__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bin_Override__c</fullName>
    <description>Fill in if a value different than the Product2 Value is needed. This is usually necessary for the One Time Discount Product.</description>
    <inlineHelpText>Fill in if a value different than the Product2 Value is needed. This is usually necessary for the One Time Discount Product.</inlineHelpText>
    <label>Accounting Bin Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>Implementation Revenue</fullName>
            </value>
            <value>
                <fullName>Record Migrator</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>