force-app/main/default/objects/OpportunityLineItem/fields/Accounting_Bin_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bin_Quantity__c</fullName>
    <formula>IF(PricebookEntry.Product2.Accounting_Bin_Quantity_Count__c, 1,0)* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Bin Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>