force-app/main/default/objects/OpportunityLineItem/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Annualized Total Price (Sales Price * Quantity)</description>
    <formula>TotalPrice * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price * 12</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>