force-app/main/default/objects/OpportunityLineItem/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>TotalPrice * 12 * IF(Recurring_Revenue__c  &amp;&amp;   ISBLANK(Opportunity.Opt_Out_Date__c ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>