force-app/main/default/objects/OpportunityLineItem/fields/ARR_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>ARR_Current_Month__c</fullName>
    <formula>IF((Item_Revenue_Start_Month__c&lt;= TODAY())  &amp;&amp;  (Item_Revenue_End_Month__c &gt;=  DATE(YEAR(TODAY()),MONTH(TODAY()),1)),  ARR__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>