force-app/main/default/objects/OpportunityLineItem/fields/ARR_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>ARR_Last_Month__c</fullName>
    <formula>IF((Item_Revenue_Start_Month__c&lt;= ADDMONTHS(TODAY(),-1)) &amp;&amp; (Item_Revenue_End_Month__c &gt;= DATE(YEAR(ADDMONTHS(TODAY(),-1)),MONTH(ADDMONTHS(TODAY(),-1)),1)), ARR__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>