force-app/main/default/objects/OpportunityLineItem/fields/Discount_Given__c.field-meta.xml
<CustomField>
    <fullName>Discount_Given__c</fullName>
    <description>Reduced List Price in %</description>
    <formula>1 - (UnitPrice  /  ListPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reduced List Price in %</inlineHelpText>
    <label>Discount Given (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>