force-app/main/default/objects/OpportunityLineItem/fields/Is_this_PS__c.field-meta.xml
<CustomField>
    <fullName>Is_this_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this PS?</label>
    <type>Checkbox</type>
</CustomField>