force-app/main/default/objects/OpportunityLineItem/fields/Item_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_End_Date__c</fullName>
    <formula>IF(ISBLANK(Item_Start_Date__c),  Opportunity.Subscription_End_Date__c ,  ADDMONTHS(Item_Start_Date__c, of_Months__c)-1)</formula>
    <label>Item End Date</label>
    <type>Date</type>
</CustomField>