force-app/main/default/objects/OpportunityLineItem/fields/Item_Revenue_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Item_Revenue_End_Month__c</fullName>
    <formula>ADDMONTHS( Item_Revenue_Start_Month__c , IF(of_Months__c-1&gt;0,of_Months__c-1,0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Revenue End Month</label>
    <type>Date</type>
</CustomField>