force-app/main/default/objects/OpportunityLineItem/fields/Item_Revenue_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Item_Revenue_Start_Month__c</fullName>
    <formula>DATE(YEAR( BLANKVALUE( Item_Start_Date__c ,  Opportunity.Subscription_Start_Date__c ) ),MONTH(BLANKVALUE( Item_Start_Date__c ,  Opportunity.Subscription_Start_Date__c )),1)</formula>
    <label>Item Revenue Start Month</label>
    <type>Date</type>
</CustomField>