force-app/main/default/objects/OpportunityLineItem/fields/Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Start_Date__c</fullName>
    <description>Start date of this opportunity line item if it differs from the start date of the full opportunity, or if the number of months for this product differs from the full opportunity. This only applies for recurring products.</description>
    <inlineHelpText>Start date of this opportunity line item if it differs from the start date of the full opportunity, or if the number of months for this product differs from the full opportunity. This only applies for recurring products.</inlineHelpText>
    <label>Item Start Date</label>
    <type>Date</type>
</CustomField>