force-app/main/default/objects/OpportunityLineItem/fields/of_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Contract period</description>
    <inlineHelpText>If this is NOT an annual subs, please enter the number of Months.</inlineHelpText>
    <label># of Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>