force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <description>Opportunity Line Item record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Line Item ID</label>
    <type>Text</type>
</CustomField>