force-app/main/default/objects/OpportunityLineItem/fields/Product_Active_Last_Full_Month_of_Opp__c.field-meta.xml
<CustomField>
    <fullName>Product_Active_Last_Full_Month_of_Opp__c</fullName>
    <formula>Item_Revenue_End_Month__c =  Opportunity.Revenue_End_Month__c</formula>
    <label>Product Active Last Full Month of Opp</label>
    <type>Checkbox</type>
</CustomField>