force-app/main/default/objects/OpportunityLineItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <description>This field is mapped to &apos;Product Family&apos; in Product and gets updated via a flow.</description>
    <label>Product Family</label>
    <length>60</length>
    <type>Text</type>
</CustomField>