force-app/main/default/objects/OpportunityLineItem/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Contract Price (Quantity*Sale Price*number of months)</description>
    <formula>if( OR(of_Months__c =0,ISBLANK(of_Months__c)) , TotalPrice , TotalPrice * of_Months__c)</formula>
    <inlineHelpText>Total Price*number of months</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>