force-app/main/default/objects/OpportunityLineItem/validationRules/NRR_Products_0_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>NRR_Products_0_Months</fullName>
    <active>false</active>
    <description>Non-recurring products must be entered with 1 or 0 months.</description>
    <errorConditionFormula>AND(of_Months__c &gt; 1,  ISPICKVAL(Product2.Product_Type__c, &quot;Non-recurring&quot;))</errorConditionFormula>
    <errorDisplayField>of_Months__c</errorDisplayField>
    <errorMessage>Non-recurring products must be entered with 1 or 0 months.</errorMessage>
</ValidationRule>