force-app/main/default/objects/OpportunityLineItem/validationRules/Product_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Group</fullName>
    <active>false</active>
    <description>Product Group to be selected</description>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Product Group cannot be empty</errorMessage>
</ValidationRule>